# vnidrop

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  build.gradle.kts  config.mk  gradle.properties  settings.gradle.kts
.cargo/: audit.toml
.github/workflows/: apple.yml  diagnostics-api.yml  docs.yml  linux-packages.yml  rust-core.yml  shared-kmp.yml  windows-store.yml
androidApp/: build.gradle.kts
apple/: .gitignore  Package.swift  README.md  Signing.xcconfig  project.yml
apple/Tests/: AppModelTests.swift  AppPreferencesRepositoryTests.swift  ApprovalCoordinatorTests.swift  CoreDispatcherTests.swift  CoreRepositoryLifecycleTests.swift  Fakes.swift  FilePreviewRepositoryTests.swift  InvitationTests.swift  ProgressDerivationTests.swift  ReceiveModelTests.swift  RelayConfigurationTests.swift  (+5 more)
crates/uniffi-bindgen/: Cargo.toml
crates/vni/: Cargo.toml  README.md
crates/vni/src/: cli.rs  main.rs  sink.rs
crates/vnidrop/: AGENTS.md  CORE_FLOW.md  Cargo.toml
crates/vnidrop/src/: access_policy.rs  api.rs  approval.rs  error.rs  event_hub.rs  filesystem.rs  handshake.rs  lib.rs  logging.rs  repository.rs  runtime.rs  secret.rs  tests.rs  ticket.rs  transfer_state.rs  util.rs
crates/vnidrop/src/runtime/: delivery.rs  facade.rs  lifecycle.rs  mod.rs  provider.rs  receive.rs  share.rs  storage.rs
crates/vnidrop/src/tests/: access_policy.rs  error.rs  filesystem.rs  handshake.rs  limits.rs  network_config.rs  relay.rs  repository.rs  runtime.rs  secret.rs  ticket.rs  transfer_state.rs
crates/vnidrop/tests/: README.md  approval.rs  custom_relay.rs  lifecycle.rs  local_transfer.rs  output_sink.rs  storage.rs  transfer.rs
crates/vnidrop/tests/support/: mod.rs
desktopApp/: build.gradle.kts
docs/: .gitignore  README.md  package-lock.json  package.json
gradle/: libs.versions.toml
localization/: README.md  package.json  schema.json  strings.json  tsconfig.json
make/: release.mk
shared/: AGENTS.md  build.gradle.kts
(+485 files in other folders)
